fixed dimensions and alignment for smoke test widget

--- a/fun_test/web/angular/qadashboard/src/app/fun-card/fun-card.component.css
+++ b/fun_test/web/angular/qadashboard/src/app/fun-card/fun-card.component.css
@@ -1,13 +1,19 @@
 .card {
+  height: 250px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 500px;
+  width: 400px;
   margin: 20px;
+}
+
+.card-body {
+  height: 75%;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
+
 
 .container {
   padding: 2px 16px;
@@ -45,6 +51,7 @@ table {
 .flex-container > div {
   padding-right: 10px;
   height: inherit;
+  justify-content: center;
 }
 
 
